src/test/deca/context/invalid/class/undefined_super_class.deca
/// Description:
// 	  error : undefined type class in class declaration
//
// Resultats:
// 	  UNDEFINED_TYPE: Type \(.\)\+ is undefined
//    line 7
class A extends B {}